fix dark mode

--- a/system/style/main.css
+++ b/system/style/main.css
@@ -43,7 +43,6 @@ body {
 }
 
 .body > div {
-  background-color: rgb(255, 255, 255);
   padding: 10px;
 }
 
@@ -163,6 +162,7 @@ button {
   background-color: var(--gray-light);
   color: var(--text-color);
   padding: 8px 16px;
+  margin: 10px 0;
   border: none;
   border-radius: var(--border-radius);
   font-weight: bold;
@@ -219,8 +219,6 @@ h2 {
 }
 
 input {
-  margin: 5%;
-  padding: 10px; 
   background-color: var(--gray-light); 
   border-radius: 20px;
 }
@@ -343,8 +341,8 @@ input:checked + .s:before {
 .slider {
   width: 100%;
   appearance: none;
-  height: 12px;
-  border-radius: 6px;
+  height: 14px;
+  border-radius: 10px;
   background: linear-gradient(to right, #e0e0f8, #6666cc);
   outline: none;
 }
@@ -509,16 +507,11 @@ body.dark-mode {
   color: white;
 }
 
-body.dark-mode .header, body.dark-mode .nav {
-  background-color: #333;
-}
-
 body.dark-mode .header li, body.dark-mode .nav li {
   color: white;
 }
 
 body.dark-mode .kalender, body.dark-mode .todaytodo, body.dark-mode .settings {
-  background-color: #2c2c2c;
   color: white;
 }
 
@@ -605,13 +598,12 @@ body.dark-mode {
 body.dark-mode .slider-container {
   position: relative;
   width: 80%;
-  margin: 50px auto;
+  margin: 40px auto;
 }
 
 /* Beispiel: Ziel-Element hat diese Eigenschaften */
 .dark-mode .slider {
   font-size: 14px;
-  padding: 4px 8px;
   background-color: #eee;
   border-radius: 4px;
 }
@@ -664,13 +656,10 @@ body.dark-mode .slider::-moz-range-thumb {
 body.dark-mode .slider-labels {
   display: flex;
   justify-content: space-between;
-  padding: 10px 5px 0;
-  font-size: 15px;
-  font-weight: 500;
+  padding: 8px 2px 0;
+  font-size: 14px;
   color: #cdbdf7;
-  letter-spacing: 0.5px;
   text-shadow: 0 0 3px rgba(168, 139, 235, 0.4);
-  width: 80%;
 }
 
 
@@ -679,9 +668,8 @@ body.dark-mode .slider-labels {
   background-color: #444;
   color: #fff;
   border: none;
-  border-radius: 12px;
   padding: 8px 16px;
-  margin: 6px 0;
+  margin: 10px 0;
   cursor: pointer;
 }
 
@@ -691,8 +679,8 @@ body.dark-mode .slider-labels {
 }
 
 .dark-mode a {
-  color: #a58fff;
-  text-decoration: underline;
+  color: #fff;
+  text-decoration: none;
 }
 
 .dark-mode .toggle-icon {
@@ -721,3 +709,7 @@ body.dark-mode .slider-labels {
   transform: translateX(0);
 }
 
+a{
+  text-decoration: none;
+  color: #333;
+}
